# aca_test

./: .dockerignore  .gitignore  Dockerfile  README.md  readme.md  run_docker.sh
src/galbot_s1_v1_description/: CMakeLists.txt  package.xml
src/galbot_s1_v1_description/config/: gz_ros2_control.yaml  ros_gz_bridge.yaml
src/galbot_s1_v1_description/launch/: display.launch.py  gazebo.launch.py
src/galbot_s1_v1_description/launch/ROS1/: display.launch  gazebo.launch
src/galbot_s1_v1_description/meshes/: S1_left_arm_end_effector_mount_link.STL  Wheel_1_direction_link.STL  Wheel_1_drive_link.STL  Wheel_2_direction_link.STL  Wheel_2_drive_link.STL  Wheel_3_direction_link.STL  Wheel_3_drive_link.STL  Wheel_4_direction_link.STL  Wheel_4_drive_link.STL  column_base_link.STL  right_arm_end_effector_mount_link.STL  torso_base_link2.STL  torso_left_arm_amount_link.STL  torso_right_arm_amount_link.STL
src/galbot_s1_v1_description/meshes/tools/: left_gripper_Link.STL  (+1 more)
src/galbot_s1_v1_description/predefined_description/: galbot_S1_V1_sphere.urdf  galbot_S1_V1_spherized.yml  galbot_S1_V1_with_GE10301_spherized.urdf  galbot_S1_V1_with_GE10301_spherized.yml  galbot_S1_with_tools_spherized.urdf  galbot_S1_with_tools_spherized.yml
src/galbot_s1_v1_description/scripts/: README.md  adjust_left_arm_zero_position.py  adjust_left_arm_zero_position_simple.py  example_zero_adjustment.py
src/galbot_s1_v1_description/urdf/: galbot_S1_V1_with_GE10301.urdf  galbot_S1_V1_with_GE10301.urdf.xacro  galbot_S1_V1_with_GE10301.urdf.xacro.bak
src/galbot_s1_v1_description/world/: maze.sdf
(+77 files in other folders)
